Updated reg service impl classes